# pyckleball

./: .gitignore  case_common.py  case_create.py  case_create2.py  case_delete.py  case_delete2.py  case_deregister.py  case_deregister2.py  case_register.py  case_register2.py  case_register_deregister.py  case_test.py  case_variables.py  date_one_week_from_today.py  date_picker_handler.py  date_variables.py  hq.py  hq2.py  hq_schedule.py  implementation_notes.md  main.py  print_success.py  print_with_color.py  pyproject.toml  sessions.py  sessions2.py  timer.py  verify_secrets_accessible.py  verify_secrets_accessible2.py  wait_until_sign_up_moment.py
.github/workflows/: debug.yml  debug_secrets.yml  scheduler.yml  scheduler2.yml
page_objects/: dashboard.py  login_page.py
tests/: test_login_page.py  test_main.py
