[project]
name = "pycleball"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "playwright>=1.52.0",
    "pytest>=8.4.0",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "schedule>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
